--- a/article.css
+++ b/article.css
@@ -11,6 +11,8 @@ html {
     background-color: white;
 }
 
+/***** HEADER *****/
+
 header {
     width: 100%;
     height: 10rem;
@@ -19,6 +21,8 @@ header {
     padding-right: 5%;
     background-color: rgb(102, 102, 102);
 }
+
+/***** TOP NAV *****/
 
 #top-nav {
     display: flex;
@@ -38,9 +42,13 @@ header {
     font-size: 20px;
 }
 
+/***** MAIN *****/
+
 main {
     display: flex;
 }
+
+/***** SIDE NAV *****/
 
 #side-nav {
     display: flex;
@@ -73,9 +81,7 @@ main {
     color: black;
 }
 
-a, a:visted, a:hover, a:active {
-    color: inherit;
-}
+/***** ACESSABILITY ASIDE *****/
 
 #access-btns {
     display: flex;
@@ -99,6 +105,8 @@ a, a:visted, a:hover, a:active {
     width: 80px;
 }
 
+/***** CONTENT SECTION *****/
+
 #content {
     width: 75%;
     height: 860px;
@@ -117,23 +125,65 @@ a, a:visted, a:hover, a:active {
     padding-bottom: 2rem;
 }
 
+/***** QUIZ SECTION *****/
+
+.quiz {
+    display: flex;
+}
+
+.topic {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(230, 230, 230);
+    width: 250px;
+    height: 200px;
+    border-radius: 10px;
+    text-align: center;
+}
+
 span {
     background-color: yellow;
     text-decoration: underline dotted;
 }
 
-.dark-mode-side {
-    background-color: rgb(0, 48, 73);
+.right-square {
+    height: 500px;
+    width: 600px;
+    margin-top: 10px;
+    background-color: rgb(230, 230, 230);
+    border-radius: 10px;
+    margin-left: 75px;
 }
 
-.dark-mode-top {
-    background-color: rgb(0, 18, 25);
+#person {
+    margin-top: 50px;
+    margin-left: 50px;
+    height: 163px;
+    width: 248px;
 }
 
-.dark-mode-main {
-    background-color: rgb(27, 73, 101);
+#monitor {
+    width: 283px;
+    height: 154px;
+    margin-left: 250px;
+    margin-top: 100px;
 }
+
+/***** FONTS AND HEADERS *****/
 
 h3 {
     font-size: 4rem;
+}
+
+h4 {
+    font-size: 3rem;
+}
+
+h5 {
+    font-size: 1.2rem;
+}
+
+a, a:visted, a:hover, a:active {
+    color: inherit;
 }
