--- a/article.css
+++ b/article.css
@@ -83,12 +83,11 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 12%;
+    width: 400px;
     background-color: #eeeeee;
     height: 100%;
     z-index: 99;
-    padding-top: 100px;
-    transition-timing-function: ease;
+    padding-top: 50px;
 }
 
 #side-nav ul li {
@@ -141,12 +140,12 @@ main {
 /***** CONTENT SECTION *****/
 
 #content {
-    width: 85%;
     padding: 6rem;
     padding-top: 2rem;
     overflow-y: scroll;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    color: black;
 }
 
 #content h2 {
