--- a/article.css
+++ b/article.css
@@ -9,6 +9,7 @@
 html {
     font-size: 10px;
     background-color: white;
+    font-family: 'Open Sans', Arial, sans-serif;
 }
 
 a {
@@ -21,7 +22,7 @@ header {
     width: 100%;
     height: 6vh;
     padding-top: 1.5rem;
-    background-color: #666666;
+    background-color: #F5F5F5;
 }
 
 /***** TOP NAV *****/
@@ -56,7 +57,7 @@ header {
 
 #top-nav li a {
     text-decoration: none;
-    color: #ffffff;
+    color: #1F1F1F;
 }
 
 #top-nav button {
@@ -84,10 +85,11 @@ main {
     justify-content: flex-start;
     align-items: center;
     width: 300px;
-    background-color: #eeeeee;
+    background-color: #000000;
     height: 100%;
     z-index: 99;
     padding-top: 50px;
+    color: #ffffff;
 }
 
 #side-nav ul li {
@@ -110,8 +112,10 @@ main {
 
 #side-nav-arrow {
     position: fixed;
-    z-index: 1000;
-    padding-left: 2rem;
+}
+
+#side-nav-arrow svg {
+    color: #ffffff;
 }
 
 /***** ACESSABILITY ASIDE *****/
