--- a/article.css
+++ b/article.css
@@ -29,7 +29,7 @@ header {
 
 #top-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -53,6 +53,7 @@ header {
     list-style: none;
     font-size: 2rem;
     text-align: center;
+    align-items: flex-start;
 }
 
 #top-nav li a {
@@ -60,9 +61,16 @@ header {
     color: #1F1F1F;
 }
 
+#top-nav li:hover {
+    text-decoration: underline;
+    text-underline-offset: 20%;
+    color: #000;
+}
+
 #top-nav button {
-    background-color: #1b4965;
+    background-color: #999999;
     color: #ffffff;
+    border: none;
 }
 
 /***** MAIN *****/
@@ -77,19 +85,29 @@ main {
     height: 93vh;
 }
 
+#content h2 {
+    color: #767474;
+}
+
 /***** SIDE NAV *****/
 
 #side-nav {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: left;
     width: 300px;
     background-color: #000000;
     height: 100%;
     z-index: 99;
     padding-top: 50px;
     color: #ffffff;
+    padding-left: 1.5rem;
+}
+
+#side-nav h4 {
+    text-decoration: underline #B8DEE0 5px;
+    text-underline-offset: 20%;
 }
 
 #side-nav ul li {
@@ -97,12 +115,16 @@ main {
     margin: 2rem 0;
     height: 3rem;
     padding-left: 2rem;
+    padding-top: 2rem;
 }
 
 #side-nav ul li:hover {
-    border: solid #595959;
-    border-width: 0 0 0 3px;
+    /* border: solid #C1F4FF;
+    border-width: 0 0 0 3px; */
     font-weight: bold;
+    text-decoration: underline;
+    text-underline-offset: 30%;
+    color: #b8dee0;
 } 
 
 #side-nav ul li a {
@@ -118,13 +140,14 @@ main {
     color: #ffffff;
 }
 
-/***** ACESSABILITY ASIDE *****/
+/***** ACCESSIBILITY ASIDE *****/
 
 #access-btns {
     width: 10%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding-top: 2rem;
 }
 
 #access-btns select {
@@ -162,10 +185,21 @@ main {
     padding: 1.5rem 0.5rem;
 }
 
+figcaption {
+    background-color: #dbd7d7;
+    width: 80%;
+    font-size: 1.5rem;
+    padding: 1.5rem;
+}
+
 /***** FONTS AND HEADERS *****/
 
 h3 {
     font-size: 4rem;
+}
+
+#content h3 {
+    color: #767474;
 }
 
 h4 {
@@ -181,12 +215,33 @@ a, a:visted, a:hover, a:active {
 }
 
 span {
-    background-color: yellow;
+    background-color: #B8DEE0;
     text-decoration: underline dotted;
+    text-underline-offset: 2px;
 }
 
 /***** ETC *****/
 
 .hidden {
     display: none !important;
+}
+
+
+/***** SCROLL BAR *****/
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
