homepage for our project.

--- a/article.css
+++ b/article.css
@@ -115,7 +115,7 @@ main {
     padding-left: 2rem;
 }
 
-/***** ACESSABILITY ASIDE *****/
+/***** ACCESSIBILITY ASIDE *****/
 
 #access-btns {
     width: 10%;
