--- a/article.css
+++ b/article.css
@@ -23,6 +23,7 @@ header {
     height: 6vh;
     padding-top: 1.5rem;
     background-color: #F5F5F5;
+    position: fixed;
 }
 
 /***** TOP NAV *****/
@@ -31,6 +32,8 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-left: 30rem;
+    padding-right: 30rem;
 }
 
 #top-nav select {
@@ -41,7 +44,6 @@ header {
 
 #top-nav ul {
     display: flex;
-    width: 100%;
 }
 
 #top-nav li {
@@ -92,6 +94,7 @@ main {
     padding-top: 50px;
     color: #ffffff;
     padding-left: 1.5rem;
+    position: fixed;
 }
 
 #side-nav h4 {
@@ -206,11 +209,13 @@ main {
 
 #content {
     padding: 7rem 30rem 5rem 5rem;
+    height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
     scroll-behavior: smooth;
     color: black;
     width: calc(100% - 300px);
+    margin-left: 300px;
 }
 
 #content h2 {
