--- a/article.css
+++ b/article.css
@@ -128,6 +128,7 @@ main {
     position: fixed;
     z-index: 1000;
     padding-left: 2rem;
+    margin-top: 0.8rem;
 }
 
 #color-toggle-btn {
@@ -209,12 +210,13 @@ main {
 
 #content {
     padding: 7rem 30rem 5rem 5rem;
+    margin: 0rem 0rem 0rem 30rem;
     height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
     scroll-behavior: smooth;
     color: black;
-    width: calc(100% - 300px);
+    width: 100%;
     margin-left: 300px;
 }
 
@@ -289,6 +291,24 @@ span {
 }
 
 /* TABLES and Below*/
-@media only screen and (max-width : 768px) {
+@media only screen and (max-device-width : 768px) {
 
+    header {
+        background-color: red;
+    }
+
+    #content {
+        margin: 0;
+        margin-top: 6vh;
+        padding: 5rem;
+        width: 100%;
+    }
+
+    #side-nav {
+        width: 600px;
+    }
+
+    html {
+        font-size: 20px;
+    }
 }
