--- a/article.css
+++ b/article.css
@@ -20,7 +20,7 @@ a {
 
 header {
     width: 100%;
-    height: 6vh;
+    height: 6rem;
     padding-top: 1.5rem;
     background-color: #F5F5F5;
     position: fixed;
@@ -132,8 +132,8 @@ main {
 }
 
 #color-toggle-btn {
-    width: 100px;
-    height: 25px;
+    width: 10rem;
+    height: 2.5rem;
     background-color: #000;
     color: #ffffff;
     border: none;
@@ -159,8 +159,8 @@ main {
 }
 
 #font-family-btns button, #font-size-btns button {
-    height: 76px;
-    width: 76px;
+    height: 7.6rem;
+    width: 7.6rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
 }
@@ -291,12 +291,7 @@ span {
 }
 
 /* TABLES and Below*/
-@media only screen and (max-device-width : 768px) {
-
-    header {
-        background-color: red;
-    }
-
+@media only screen and (max-device-width : 1024px) {
     #content {
         margin: 0;
         margin-top: 6vh;
@@ -310,5 +305,22 @@ span {
 
     html {
         font-size: 20px;
+    }
+
+    #color-toggle-btn {
+        font-size: 1.5rem;
+    }
+
+    #top-nav {
+        padding-left: 3rem;
+        padding-right: 0rem;
+    }
+
+    #side-nav-arrow {
+        margin-top: 2rem;
+    }
+
+    #side-nav {
+        padding-top: 100px;
     }
 }
