--- a/style.css
+++ b/style.css
@@ -85,22 +85,26 @@ main {
         width: 100%;
 }
 
-#containerForWords {
+#anotherContainer {
     width: 100%;
+
     
 }
 #accessibilityImgContainer{
     display: flex;
-    width: 100%;
+    width: auto;
+    height: auto;
     justify-content: center;
     
 }
 
 #accessibilityImg {
     padding-top: 50px;
+    padding-bottom: 50px;
+    padding-right: 10px;
+    padding-left: 10px;
     display: block;
     width: 100%;
-    height: auto;
     opacity: 0.5;
     margin-left: auto;
     margin-right: auto;
@@ -109,16 +113,16 @@ main {
 
 #overlay {
     position: absolute;
-    width: 50%;
-    height: 650px;
-    left: -7px;
-    top: 161px;
+    width: 100%;
+    height: 70%;
+    left: -10px;
+    top: 100px;
     background: rgba(23, 9, 9, 0.08);
 }
 
 
 #accessibilityHeader h1 {
-    font-family: 'Niramit';
+    font-family: 'Niramit', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 64px;
@@ -126,6 +130,29 @@ main {
 
     color: #4E4444;
 }
+
+
+#containerForWords #firstLine {
+    position: absolute;
+    font-size: 3vmax;
+    left: 30px;
+    top: 125px;
+
+    /* identical to box height */
+    text-align: center;
+}
+
+#containerForWords #secondLine {
+    position: absolute;
+    /*display: flex;
+    align-content: flex-end;*/
+    width: 723px;
+    height: 147px;
+    left: 772px;
+    top: 675px;
+    font-size: 3vmax;
+}
+
 
 /*Button -> Articles*/
 
@@ -163,20 +190,28 @@ main {
 
 
 /* Introduction Text */
-#content .homePage_text {
+#content {
+    display:flex; 
+    flex-direction: column; 
+    flex:1;
+
+}
+
+#HomePageText {
+    margin-bottom: auto;
     position: absolute;
     width: 1127px;
     height: 86px;
     left: 154px;
     top: 982px;
 
+
     font-family: 'Roboto';
-    font-style: normal;
     font-weight: 300;
     font-size: 28px;
     line-height: 33px;
     text-align: center;
-
     color: #676767;
 }
+
 
