--- a/article.css
+++ b/article.css
@@ -229,6 +229,21 @@ main {
     padding: 1.5rem 0.5rem;
 }
 
+#content li {
+    font-size: 1.75rem;
+    padding-left: 10px;
+    padding-bottom: 1rem;
+}
+
+#content ul {
+    padding-left: 25px;
+    padding-bottom: 1rem;
+}
+
+#content strong {
+    font-size: 2.5rem;
+}
+
 figcaption {
     background-color: #dbd7d7;
     width: 80%;
