--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ main {
 
 #anotherContainer {
     width: 100%;
+    position: relative;
 
     
 }
@@ -101,7 +102,7 @@ main {
 }
 
 #accessibilityImg {
-    padding-top: 20px;
+    padding-top: 10vh;
     display: block;
     width: 100%;
     height: 100%;
@@ -117,15 +118,15 @@ main {
     font-style: normal;
     font-weight: 600;
     line-height: 83px;
-    color: #4E4444;
+    color: #1f1717;
 }
 
 
 #firstLine {
     position: absolute;
-    font-size: 4vw;
-    left: 3vw;
-    /*!*/top: 13vh;
+    font-size: 3.3vw;
+    left: 30px;
+    /*!*/top: 100px;
     
 
     /* identical to box height */
@@ -134,9 +135,9 @@ main {
 
 #secondLine {
     position: absolute;
-    font-size: 4vw;
-    right: 50px;
-    bottom: 51.5vmax;
+    font-size: 3.3vw;
+    right: 45px;
+    bottom: -5px;
     text-align: center;
 }
 
@@ -144,7 +145,7 @@ main {
 /*Button -> Articles*/
 
 #homePage_btn button{
-    margin: 5vh;
+    margin: 4vw;
     padding-right: 10px;
     padding-left: 10px;
     
@@ -153,11 +154,11 @@ main {
 
 
     /**Size**/
-    width: 15vw;
+    width: 20vw;
     height: 6vw;
 
     /**Decorate**/
-    background: #545454;
+    background: #0c0c0c;
     border: 0.1vmax solid #DCDCDC;
     box-shadow: 0px 0.2vmax 0.2vmax rgba(0, 0, 0, 0.25);
     border-radius: 2vmax;
@@ -179,11 +180,13 @@ main {
 /* Introduction Text */
 #content{
     align-items: flex-end;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    padding-bottom: 10vh;
 
 }
 
 #HomePageText {
-    margin-bottom: auto;
     /**Decoration**/
     font-family: 'Roboto';
     font-weight: 300;
