--- a/style.css
+++ b/style.css
@@ -19,22 +19,20 @@ a {
 
 header {
     width: 100%;
-    height: 6vh;
+    height: 6rem;
     padding-top: 1.5rem;
-    background-color: #666666;
+    background-color: #F5F5F5;
+    position: fixed;
 }
 
 /***** TOP NAV *****/
 
 #top-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-}
-
-#top-nav button {
-    width: 75px;
-    height: 25px;
+    padding-left: 30rem;
+    padding-right: 30rem;
 }
 
 #top-nav select {
@@ -45,24 +43,26 @@ header {
 
 #top-nav ul {
     display: flex;
-    width: 100%;
 }
 
 #top-nav li {
     list-style: none;
     font-size: 2rem;
     text-align: center;
+    align-items: flex-start;
 }
 
 #top-nav li a {
     text-decoration: none;
-    color: #ffffff;
+    color: #1F1F1F;
 }
 
-#top-nav button {
-    background-color: #1b4965;
-    color: #ffffff;
+#top-nav li:hover {
+    text-decoration: underline;
+    text-underline-offset: 20%;
+    color: #000;
 }
+
 
 /***** MAIN *****/
 
