--- a/quiz.css
+++ b/quiz.css
@@ -6,12 +6,15 @@
 }
 
 .multiple-choice-container {
-  height: 50rem;
-  width: 50rem;
+  height: 200vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   scroll-snap-align: start;
+  margin-top: 200px;
+  margin-bottom: 500px;
 }
 
 .quiz-button {
@@ -45,29 +48,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 5000px;
-    overflow: scroll;
-  }
-  
-  
-  body {
-    scroll-behavior: smooth;
-    overflow: hidden;
-  }
-
-body,html {
-  margin: 0;
-  padding: 0;
-}
-* {
-  box-sizing: border-box;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    /*width: calc(100vw - 300px);*/
+    scroll-snap-type: y mandatory;
+    scroll-snap-points-y: repeat(100vh);
+    height: 500px;
 }
 
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
+.quiz-container > section {
+    flex: 1;
 }
+  
 
 a {
   text-decoration: none;
@@ -111,10 +103,4 @@ a {
     
 }
 
-
-.scroll-container {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  width: calc(100vw - 300px);
-}
 
