--- a/article.css
+++ b/article.css
@@ -327,6 +327,10 @@ span {
         width: 100%;
     }
 
+    #content h2 {
+        font-size: 12vw;
+    }
+
     #side-nav {
         width: 600px;
     }
