--- a/quiz.css
+++ b/quiz.css
@@ -80,8 +80,19 @@ background-color: #3a8;
     transition: 300ms ease;
 }
 
+.quiz-question-box {
+    max-width: 700px;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
 .quiz-button-text {
   font-size: 1.4rem;
+  text-align: center;
+}
+
+.quiz-button-icon {
+    margin-right: 20px;
 }
 
 .quiz-button:first-child {
