--- a/quiz.css
+++ b/quiz.css
@@ -172,7 +172,17 @@ a {
         margin-top: 6vh;
         padding: 5rem;
         width: 100%;
-        min-width: 2000px;
+        min-width: 200px;
+        height: 50%;
+        min-height: 50px;
+    }
+
+    #refresh-button {
+        font-size:calc(8px + 1.5vw);
+    }
+
+    #results {
+        font-size:calc(6px + 1.0vw);
     }
 }
 
